--- a/sections/introduzione.tex
+++ b/sections/introduzione.tex
@@ -1,10 +1,14 @@
 \chapter{Introduzione}
 
-L'odierna "corsa agli armamenti" tra difensori e antagonisti in di information security è sbilanciata verso chi attacca, e chi difende è spesso costretto a prendere contromisure in modo reattivo. Molte famiglie di malware utilizzano la tecnica dei domini generati algoritmicamente (DGA) per stabilire una connessione con il centro di comando e controllo (C\&C). Nel caso particolare delle botnet, la difesa verso i DGA è resa particolarmente ostica dalla grande quantità di domini di rete generati, rendendo infattibile l'individuazione di tutti possibili domini da inserire in liste di esclusione. Tuttavia gli approcci di Machine Learning odierni permettono ai difensori di utilizzare tecniche pro-attive nei confronti degli antagonisti. Infatti grazie al Machine Learning è possibile realizzare algoritmi predittivi in grado di classificare domini mai analizzati prima, discriminando tra malware e domini legittimi.
+La tesi si focalizza sul rilevamento di domini generati algoritmicamente (DGA) che sono utilizzati dalle Botnet per attuare comunicazione coi centri di Comando e Controllo (C\&C). Tale meccanismo è alla base dei principali malware quali Cryptolocker, Zeus, Ppushdo, Rovnix, Tinba, Conficker, Matsnu e Ramdo, che in tal modo riescono a superare i sistemi di difesa. Nel caso particolare dei DGA, la metodologia di difesa comunemente attuata è l'inclusione di grandi quantità di domini DGA in liste di esclusione statiche. Tale metodo lascia libertà agli attaccanti di modificare i propri algoritmi ed eludere la difesa. L'idea innovativa alla base di questa tesi è l'adozione di tecniche di classificazione basate su Machine Learning per migliorare le percentuali di rilevamento degli attacchi che utilizzano DGA.
 
-All'interno di questo elaborato si dimostra in prima fase come è possibile realizzare un classificatore con algoritmi di Machine Learning in grado di discriminare tra domini generati tramite DGA e domini realmente esistenti (Capitolo~\ref{projclass}). All'interno dello stesso capitolo si presenta l'evoluzione di tale classificatore, utilizzando una rete neurale in grado di eseguire lo stesso compito senza l'ausilio di features ingegnerizzate.
+All'interno del Capitolo~\ref{statodellarte} si enunciano i fondamenti teorici alla base di questo lavoro. Successivamente, nel Capitolo~\ref{projclass} si presenta il progetto di un classificatore realizzato mediante algoritmi di Machine Learning in grado di distingurere tra domini legittimi e domini DGA. All'interno dello stesso capitolo si presenta l'evoluzione di tale classificatore, realizzato mediante reti neurali, in grado di raggiungere il medesimo risultato senza l'ausilio di features ingegnerizzate.
 
-Con Adversarial Machine Learning si intendono le tecniche adottate per rendere sicuri gli algoritmi di Machine Learning rispetto ad ambienti ostili. In particolare il problema sorge dal fatto che le tecniche di Machine Learning sono state originariamente ideate per ambienti stazionari in cui i dati di training e testing sono stati generati a partire dalla stessa distribuzione. In presenza di antagonisti spinti da fini economici, tale ipotesi è violabile in certa misura a seconda della tipologia di attacco. Infatti un attacker può manipolare i dati di input sfruttando specifiche vulnerabilità degli algoritmi di apprendimento, compromettendo la sicurezza del sistema. Nel contesto di questo elaborato si procede a rafforzare il classificatore realizzato nel Capitolo~\ref{projclass}, tramite la progettazione e implementazione di una Generative Adversarial Network (Capitolo~\ref{adv}) in grado di generare nomi di dominio sintetici basati su domini reali. Tali dati saranno poi utilizzati per allenare ulteriormente il classificatore, rinforzando la propria efficiacia rispetto a tipologie di DGA non predicibili.
+Il successivo passo di miglioramento, presentato all'interno del Capitolo~\ref{adv}, è la realizzazione di un sistema di Generative Adversarial Network (\textit{abbr. GAN}) basato sull'architettura di un Autoencoder. Tale sistema estrae le caratteristiche fondamentali dei domini legittimi con lo scopo di creare domini sintetici su cui allenare il classificatore precedentemente realizzato. L'obiettivo di tale attività è rafforzare la capacità predittiva del classificatore, allenandolo con esempi mai visti in precedenza ed irrobustendolo rispetto a casi futuri.
+ 
+All'interno del Capitolo~\ref{implementazione} viene mostrato il procedimento implementativo delle architetture presentate nei capitoli precedenti, in particolare si mostrano le conformazioni dei dataset utilizzati in fase di training, i parametri realizzativi degli algoritmi implementati e le tecniche di training applicate.
+
+Nel Capitolo~\ref{risultati} viene mostrata un'analisi dettagliata dei risultati ottenuti e le problematiche incontrate durante la fase sperimentali dei classificatori e delle reti di Adversarial Learning. In ultima fase, all'interno del Capitolo~\ref{conclusioni} si riassume il lavoro svolto e si commenta in maniera sintetica i risultati ottenuti, assieme a possibili soluzioni di miglioramento.
 
 \begin{figure}[!bp]
     \centering
